* fixed description for STS * fixed CSS to make H2 small text readable

--- a/css/custom.css
+++ b/css/custom.css
@@ -77,6 +77,10 @@ h1 small {
 	color: rgb(191, 191, 191);	
 }
 
+h2 small {
+	color: rgb(191, 191, 191);	
+}
+
 .label.important {
 	background-color: rgb(196, 60, 53);
 }
